# config/swagger.yaml
@@ -1,177 +1,452 @@
 swagger: '2.0'
 info:
-  version: 0.0.1
-  title: node-rest-starter-kit
+  title: 广告系统数据对象API
+  version: '1.0'
 basePath: /api/v1
-schemes:
-  - http
-  - https
 consumes:
   - application/json
 produces:
   - application/json
 paths:
-  /products:
-    x-swagger-router-controller: products
+  /ad_plans:
+    x-swagger-router-controller: ad_plans    
+    post:
+      tags:
+        - 广告计划
+      summary: 创建广告计划
+      description: 创建广告计划
+      operationId: create
+      parameters:
+        - name: X-FIVEMILES-USER-ID
+          in: header
+          description: current user fuzzy id
+          required: true
+          type: string          
+        - name: plan
+          in: body
+          description: 要创建的广告计划
+          required: true
+          schema:
+            type: object
+            required:
+              - title
+              - ad_type
+              - ad_scope
+              - item
+              - duration
+              - begin_time
+              - end_time
+              - price
+              - state
+            properties:
+              title:
+                type: string
+                description: 广告计划描述
+              ad_type:
+                type: integer
+                default: 1
+                enum:
+                  - 1
+                description: 广告类型(1:置顶)
+              ad_scope:
+                type: integer
+                default: 2
+                enum:
+                  - 2
+                description: 广告范围(2：二级分类)
+              item:
+                type: object
+                required:
+                  - id
+                  - fuzzy_id
+                  - title
+                  - root_category_id
+                  - category_id
+                properties:
+                  id:
+                    type: integer
+                    description: 商品ID
+                  fuzzy_id:
+                    type: string
+                    description: 商品FuzzyID
+                  title:
+                    type: string
+                    description: 商品标题
+                  root_category_id:
+                    type: integer
+                    description: 根分类ID
+                  category_id:
+                    type: integer
+                    description: 分类ID
+                  state:
+                    type: integer
+                    default: 0
+                    description: 商品状态
+                description: 商品
+              duration:
+                type: integer
+                description: 广告时长
+              begin_time:
+                type: integer
+                format: int64
+                default: 1451577600000
+                description: 开始时间戳
+              end_time:
+                type: integer
+                format: int64
+                default: 4070880000000
+                description: 结束时间戳
+              price:
+                type: number
+                format: double
+                description: 价格
+              cities:
+                type: array
+                items:
+                  $ref: '#/definitions/AdPlan.City'
+                description: 广告投放的城市信息
+              state:
+                type: integer
+                enum:
+                  - 1
+                description: 广告计划状态（1：Pending 待付款）
+      responses:
+        '201':
+          description: 创建成功，返回新创建的广告计划ID
+          schema:
+            type: object
+            required:
+              - id
+            properties:
+              id:
+                type: integer
+        '400':
+          $ref: '#/responses/BadRequest'
+        '500':
+          $ref: '#/responses/InternalServerError'
+  /ad_plans/{id}/pay:
+    x-swagger-router-controller: ad_plans    
+    post:
+      tags:
+        - 广告计划
+      summary: 广告计划付款
+      description: 广告计划付款状态更新
+      operationId: pay
+      parameters:
+        - name: id
+          in: path
+          description: 广告计划ID
+          required: true
+          type: integer
+        - name: order
+          in: body
+          required: true
+          schema:
+            type: object
+            required:
+              - order_id
+              - state
+            properties:
+              state:
+                type: integer
+                description: 付款状态，2：付款成功，3：付款失败
+                enum: 
+                  - 2
+                  - 3
+              order_id:
+                type: integer
+                description: 订单ID
+      responses:
+        '204':
+          $ref: '#/responses/NoContent'
+        '400':
+          $ref: '#/responses/BadRequest'
+        '404':
+          $ref: '#/responses/NotFound'
+        '500':
+          $ref: '#/responses/InternalServerError'
+  /ad_plans/featured/avaliable_cities:
+    x-swagger-router-controller: featured    
     get:
       tags:
-        - product
-      operationId: getAll
-      summary: get all products
-      description: get all products
+        - 广告计划
+      summary: 获取分类置顶可选的城市及时间
+      description: 获取分类置顶可选的城市及时间
+      operationId: getAvailableCities
+      parameters:
+        - name: country
+          in: query
+          required: false
+          default: 'United States'
+          type: string
+          description: 国家
+        - name: region
+          in: query
+          required: false
+          default: ''
+          type: string
+          description: 州
+        - name: city
+          in: query
+          required: true
+          type: string
+          description: 城市
+        - name: category
+          in: query
+          required: true
+          type: integer
+          description: 分类ID
       responses:
         '200':
-          description: return an array of product objects
+          description: 获取成功，返回可选城市及时间
           schema:
             type: array
             items:
-              $ref: '#/definitions/Product'
+              type: object
+              required:
+                - region
+                - city
+                - end_time
+              properties:
+                region:
+                  type: string
+                  description: 州
+                city:
+                  type: string
+                  description: 城市
+                end_time:
+                  type: 
+                    - integer
+                    - 'null'
+                  format: int64
+                  description: 目前置顶的最大时间戳
+        '400':
+          $ref: '#/responses/BadRequest'
         '500':
-          description: error
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-    post:
-      tags:
-        - product
-      operationId: create
-      summary: create a new product
-      parameters:
-        - name: product
-          description: new product
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/Product'
-      responses:
-        '201':
-          description: return the newly created product
-          schema:
-            $ref: '#/definitions/Product'
-        '500':
-          description: error
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-  '/products/{id}':
-    x-swagger-router-controller: products
+          $ref: '#/responses/InternalServerError'
+  /ad_plans/featured/history:
+    x-swagger-router-controller: featured    
     get:
       tags:
-        - product
-      operationId: getSingle
-      summary: get product by id
+        - 广告计划
+      summary: 获取置顶历史
+      description: 获取置顶历史
+      operationId: getHistory
+      parameters:
+        - name: X-FIVEMILES-USER-ID
+          in: header
+          description: current user fuzzy id
+          required: true
+          type: string        
+        - name: limit
+          in: query
+          type: integer
+          description: 每页数量
+          default: 50
+          required: false
+        - name: offset
+          in: query
+          type: integer
+          description: 页起始索引
+          default: 0
+          required: false
+      responses:
+        '200':
+          description: 获取成功，返回置顶历史
+          schema:
+            type: object
+            required:
+              - meta
+            properties:
+              meta:
+                description: 数据分页信息
+                $ref: '#/definitions/PagerMeta'
+              objects:
+                description: 数据记录集
+                type: array
+                items:
+                  $ref: '#/definitions/FeaturedHistory'
+        '400':
+          $ref: '#/responses/BadRequest'
+        '500':
+          $ref: '#/responses/InternalServerError'
+  /ad_plans/featured/{id}/valid:
+    x-swagger-router-controller: featured    
+    get:
+      tags:
+        - 广告计划
+      summary: 检查置顶计划是否有效
+      description: 检查置顶计划是否有效
+      operationId: checkValid
       parameters:
         - name: id
           in: path
+          description: 广告计划ID
           required: true
           type: integer
       responses:
         '200':
-          description: return the product
-          schema:
-            $ref: '#/definitions/Product'
-        '404':
-          description: product not found
-        '500':
-          description: error
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-    put:
-      tags:
-        - product
-      operationId: update
-      summary: update a product
-      parameters:
-        - name: id
-          in: path
-          required: true
-          type: integer
-        - name: product
-          description: product to update
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/Product'
-      responses:
-        '204':
-          description: product has been updated successfully
-        '404':
-          description: product not found
-        '500':
-          description: error
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-    delete:
-      tags:
-        - product
-      operationId: delete
-      summary: delete a product
-      parameters:
-        - name: id
-          in: path
-          required: true
-          type: integer
-      responses:
-        '204':
-          description: product has been deleted successfully
-        '404':
-          description: product not found
-        '500':
-          description: error
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-  '/products/{id}/valid':
-    x-swagger-router-controller: products
-    get:
-      tags:
-        - product
-      operationId: valid
-      summary: check if product is valid
-      parameters:
-        - name: id
-          in: path
-          required: true
-          type: integer
-      responses:
-        '200':
-          description: if product is valid
+          description: 有效返回
           schema:
             type: object
             required:
               - valid
             properties:
               valid:
+                description: 有效标识
                 type: boolean
+        '400':
+          $ref: '#/responses/BadRequest'
         '404':
-          description: product not found  
+          $ref: '#/responses/NotFound'
         '500':
-          description: error
+          $ref: '#/responses/InternalServerError'
+  /mq/items:
+    x-swagger-router-controller: mq    
+    post:
+      tags:
+        - 消息队列处理
+      summary: Item消息处理
+      description: 处理MQ中item的操作消息
+      operationId: processItemMessage
+      parameters:
+        - name: message
+          in: body
+          description: Item消息数组
+          required: true
           schema:
-            $ref: '#/definitions/ErrorResponse'
+            type: array
+            items:  
+              $ref: '#/definitions/ItemMessage'
+      responses:
+        '204':
+          $ref: '#/responses/NoContent'
+        '400':
+          $ref: '#/responses/BadRequest'
+        '500':
+          $ref: '#/responses/InternalServerError'
+  /mq/users:
+    post:
+      tags:
+        - 消息队列处理
+      summary: User消息处理
+      description: 处理MQ中user的操作消息
+      operationId: processUserMessage
+      parameters:
+        - name: message
+          in: body
+          description: User消息数组
+          required: true
+          schema: 
+            type: array
+            items:
+              $ref: '#/definitions/UserMessage'
+      responses:
+        '204':
+          $ref: '#/responses/NoContent'
+        '400':
+          $ref: '#/responses/BadRequest'
+        '500':
+          $ref: '#/responses/InternalServerError'          
 definitions:
-  Product:
+  AdPlan.City:
+    description: 广告投放的城市及起止时间
     type: object
     required:
-      - name
+      - region
+      - city
+      - begin_time
+      - end_time
     properties:
-      id:
+      region:
+        type: string
+        description: 州
+      city:
+        type: string
+        description: 城市
+      begin_time:
         type: integer
-        format: int32
-      name:
-        type: string
-        description: product name
-      state:
+        format: int64
+        default: 1451577600000
+        description: 起始时间戳
+      end_time:
         type: integer
-        description: product state
-        enum:
-          - 1
-          - 2
-      created_at:
+        format: int64
+        default: 4070880000000
+        description: 结束时间戳
+  FeaturedHistory:
+    type: object
+    required:
+      - city
+      - date_scope
+      - item_id
+      - item_title
+    properties:
+      date_scope:
         type: string
-        format: date-time
-        description: created at
-      updated_at:
+        description: 广告投放时间，格式：起始时间戳1:起始时间戳2,起始时间戳3:起始时间戳4
+      city:
         type: string
-        format: date-time
-        description: updated at
+        description: City
+      item_id:
+        type: integer
+        description: 商品ID
+      item_title:
+        type: string
+        description: 商品名称
+  PagerMeta:
+    description: 分页数据的meta信息
+    type: object
+    required:
+      - next
+      - offset
+      - total_count
+    properties:
+      next:
+        type: 
+          - 'null'
+          - string
+        description: 获取下一页的条件，例如 "?offset=20&limit=20"
+      previous:
+        type: 
+          - 'null'
+          - string
+        description: 获取上一页的条件，例如 "?offset=0&limit=20"
+      offset:
+        type: integer
+        description: 当前的offset
+      limit:
+        type: integer
+        description: 当前的limit
+      total_count:
+        type: integer
+        description: 记录总数
+  ItemMessage:
+    description: Item消息
+    type: object
+    required:
+      - item_id
+      - item_action
+    properties:
+      item_id:
+        description: Item Id
+        type: integer
+      item_action:
+        description: Item操作
+        type: string
+  UserMessage:
+    description: 用户消息
+    type: object
+    required:
+      - user_action
+      - user_id
+    properties:
+      user_id:
+        description: 用户Id
+        type: integer
+      user_action:
+        description: 用户操作
+        type: string        
   ErrorResponse:
     type: object
     required:
@@ -187,5 +462,20 @@ definitions:
     properties:
       code:
         type: string
+        description: 错误代码
       message:
         type: string
+        description: 错误信息
+responses:
+  NoContent:
+    description: Successfully fulfilled(no content)
+  BadRequest:
+    description: Bad Request
+    schema:
+      $ref: '#/definitions/ErrorResponse'
+  NotFound:
+    description: Not Found
+  InternalServerError:
+    description: Internal Server Error
+    schema:
+      $ref: '#/definitions/ErrorResponse'
