# src/models/ad_plan_cities.js
@@ -1,0 +1,18 @@
+'use strict'
+module.exports = function (sequelize, DataTypes) {
+  var adPlanCities = sequelize.define('AdPlanCities', {
+    ad_plan_id: DataTypes.INTEGER,
+    city: DataTypes.STRING,
+    region: DataTypes.STRING,
+    begin_time: DataTypes.BIGINT,
+    end_time: DataTypes.BIGINT
+  }, {
+    tableName: 'ad_plan_cities',
+    classMethods: {
+      associate: function (models) {
+        // associations can be defined here
+      }
+    }
+  })
+  return adPlanCities
+}
